# kafka-rust

./: .gitignore  Cargo.toml
examples/: console-consumer.rs  console-producer.rs  example-consume.rs  example-fetch.rs  example-openssl.rs  example-produce.rs  example-rustls.rs  offset-monitor.rs  topic-metadata.rs
src/: codecs.rs  error.rs  lib.rs  producer.rs
src/client/: metadata.rs  mod.rs  network.rs  state.rs
src/compression/: snappy.rs
src/consumer/: assignment.rs  builder.rs  mod.rs  state.rs
src/protocol/: consumer.rs  fetch.rs  mod.rs  offset.rs  produce.rs  sasl_authenticate.rs  zreader.rs
src/security/: mod.rs  security_config.rs  stream.rs
tests/: test_kafka.rs
tests/integration/client/: mod.rs
tests/integration/consumer_producer/: consumer.rs  mod.rs
