[package]
name = "kafka"
version = "0.9.0"
authors = ["Yousuf Fauzan", "Petr Novotnik <pnovotnik@googlemail.com>", "Emily Matheys <emilymatt96@gmail.com>"]
categories = ["api-bindings"]
documentation = "https://docs.rs/kafka/"
edition = "2021"
keywords = ["kafka", "queue"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kafka-rust/kafka-rust"
description = "Rust client for Apache Kafka"

[dependencies]
byteorder = "1.4"
crc = "3.0"
fnv = "1.0"
ref_slice = "1.2"
thiserror = "1.0"
tracing = "0.1"
twox-hash = "1.6"

flate2 = { version = "1.0", optional = true }
openssl = { version = "0.10", optional = true }
openssl-sys = { version = "0.9", optional = true }
rustls = { version = "0.21", features = ["dangerous_configuration"], optional = true }
rustls-pemfile = { version = "1.0", optional = true }
snap = { version = "1.0", optional = true }
webpki-roots = { version = "0.23", optional = true }
rustls-webpki = { version = "0.100", optional = true }

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.10"
getopts = "0.2"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
time = "0.3"
x509-certificate = "0.19"

[features]
default = ["snappy", "gzip", "security-rustls"]
snappy = ["snap"]
gzip = ["flate2"]
security-openssl = ["openssl", "openssl-sys"]
security-rustls = ["rustls", "webpki-roots", "rustls-webpki", "rustls-pemfile"]
nightly = []
integration_tests = []
